--- a/src/main.css
+++ b/src/main.css
@@ -1,53 +1,33 @@
+/* General layout options */
+
 html, body, h1, h2, h3, p, ul, li, a {
-  padding: 0;
-  border:0;
-  margin: 0;
+  border: 0;
   font-size: 100%;
   font: inherit;
   font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-html {
-  background-color: #BBCCFF;
-  background: linear-gradient(to bottom, #BBCCFF, #FFFFFF);
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-.header {
-  background-color: #2222FF;
-  background: linear-gradient(to right, #2222FF, #8888FF);
-  box-shadow: 0px 0px 40px grey;
-  color: #FFFFFF;
-  padding: 1% 1% 1% 1%;
-  object-fit: contain;
+  /** Make 1st and 2nd boxes take up half the width each */
+.wrapper > ul > li:nth-of-type(1),
+.wrapper > ul > li:nth-of-type(2)
+{
+  float: left;
+  list-style-type: none;
+  padding: 1% 1% 0% 1%;
+  width: 48%;
 }
 
-.header img {
-  border-radius: 50%;
-  margin: 0% 15% 0% 15%;
-  max-height: 12%;
-}
-
-.header h1 {
-  font-size: 450%;
-  font-weight: bold;
-  letter-spacing: 5px;
-}
-
-.header h2 {
-  font-size: 250%;
-}
-
-main {
+body {
   background-color: #FFFFFF;
-  border: 2px solid black;
-  font-size: 115%;
-  margin: 3% 45% 3% 3%;
-  padding: 3%;
-  text-align: justify;
-}
-
-main div {
-  padding-bottom: 10%;
+  background: linear-gradient(to bottom, #879AF5, #FFFFFF);
 }
 
 h3 {
@@ -59,6 +39,52 @@ h3 {
   text-align: center;
 }
 
+/* Header section */
+
+header {
+  background-color: #1235DC;
+  background: linear-gradient(to right, #1235DC, #4664F0);
+  box-shadow: 0px 0px 10px #000000;
+  color: #FFFFFF;
+  padding: 1% 0% 1% 0%;
+  object-fit: contain;
+}
+
+header table {
+  margin: auto;
+}
+
+header img {
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px #FFFFFF;
+  margin: 0% 15% 0% 15%;
+  max-height: 12%;
+}
+
+header h1 {
+  font-size: 450%;
+  font-weight: bold;
+  letter-spacing: 5px;
+}
+
+header h2 {
+  font-size: 250%;
+}
+
+/* Summary box */
+
+.summary {
+  background-color: #FFFFFF;
+  box-shadow: 0px 0px 10px #000000;
+  font-size: 115%;
+  padding: 3%;
+  text-align: justify;
+}
+
+.summary div {
+  padding-bottom: 3%;
+}
+
 .skills li{
   display: inline;
   padding-left: 5%;
@@ -68,4 +94,42 @@ h3 {
 .skills ul{
   text-align: center;
   padding-top: 2%;
+}
+
+/* Badges box */
+
+.badges {
+  background-color: #FFFFFF;
+  box-shadow: 0px 0px 10px #000000;
+  font-size: 115%;
+  padding: 3%;
+  text-align: justify;
+}
+
+.badges div {
+  padding-bottom: 3%;
+}
+
+/* Questions box */
+
+.questions {
+  background-color: #FFFFFF;
+  box-shadow: 0px 0px 10px #000000;
+  font-size: 115%;
+  margin: 1%;
+  padding: 3%;
+  text-align: justify;
+}
+
+.questions li {
+  font-weight: bold;
+}
+
+.questions p {
+  font-style: italic;
+  padding-bottom: 1%;
+}
+
+.questions div {
+  padding-bottom: 5%;
 }
