--- a/src/main.css
+++ b/src/main.css
@@ -27,7 +27,7 @@ html, body, h1, h2, h3, p, ul, li, a {
 
 body {
   background-color: #FFFFFF;
-  background: linear-gradient(to bottom, #879AF5, #FFFFFF);
+  background: linear-gradient(to bottom, #8FE4F3, #FFFFFF);
 }
 
 h3 {
@@ -75,6 +75,7 @@ header h2 {
 
 .summary {
   background-color: #FFFFFF;
+  background: linear-gradient(to bottom, #C8D0FB, #FFFFFF);
   box-shadow: 0px 0px 10px #000000;
   font-size: 115%;
   padding: 3%;
@@ -100,6 +101,7 @@ header h2 {
 
 .badges {
   background-color: #FFFFFF;
+  background: linear-gradient(to bottom, #C8D0FB, #FFFFFF);
   box-shadow: 0px 0px 10px #000000;
   font-size: 115%;
   padding: 3%;
@@ -114,6 +116,7 @@ header h2 {
 
 .questions {
   background-color: #FFFFFF;
+  background: linear-gradient(to bottom, #C8D0FB, #FFFFFF);
   box-shadow: 0px 0px 10px #000000;
   font-size: 115%;
   margin: 1%;
