--- a/src/main.css
+++ b/src/main.css
@@ -27,7 +27,7 @@ html, body, h1, h2, h3, p, ul, li, a {
 
 body {
   background-color: #FFFFFF;
-  background: linear-gradient(to bottom, #8FE4F3, #FFFFFF);
+  background: linear-gradient(to bottom, #FFE4F3, #FFFFFF);
 }
 
 h3 {
@@ -37,6 +37,11 @@ h3 {
   margin-bottom: 1%;
   padding: 1% 0 1% 0;
   text-align: center;
+}
+
+a  {
+  text-decoration: none;
+  color: #1235DC;
 }
 
 /* Header section */
@@ -97,9 +102,9 @@ header h2 {
   padding-top: 2%;
 }
 
-/* Badges box */
+/* Training box */
 
-.badges {
+.training {
   background-color: #FFFFFF;
   background: linear-gradient(to bottom, #C8D0FB, #FFFFFF);
   box-shadow: 0px 0px 10px #000000;
@@ -108,7 +113,7 @@ header h2 {
   text-align: justify;
 }
 
-.badges div {
+.training div {
   padding-bottom: 3%;
 }
 
